--- a/resources/views/components/topbar.antlers.html
+++ b/resources/views/components/topbar.antlers.html
@@ -1,4 +1,3 @@
-{{# {{? $docsUrl = config('services.vigilant.docs_url') ?}} #}}
 {{# {{? $appUrl = config('services.vigilant.app_url') ?}} #}}
 <header class="bg-black z-40" x-data="{ sideMenu: false }">
     <nav class="mx-auto flex max-w-7xl items-center justify-between p-4 lg:px-8" aria-label="Global">
@@ -74,7 +73,7 @@
             </div>
 
 
-            <a href="{{ $docsUrl }}" class="text-md font-semibold leading-6 text-base-200">Documentation</a>
+            <a href="/documentation" class="text-md font-semibold leading-6 text-base-200">Documentation</a>
             <a href="/articles" class="text-md font-semibold leading-6 text-base-200">Blog</a>
         </div>
         <div class="hidden lg:flex lg:flex-1 lg:justify-end">
@@ -128,7 +127,7 @@
                                         class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-base-100 hover:bg-base-950">All Features</a>
                             </div>
                         </div>
-                        <a href="{{ $docsUrl }}"
+                        <a href="/documentation"
                            class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-base-100 hover:bg-base-950">Documentation</a>
                         <a href="/articles"
                            class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-base-100 hover:bg-base-950">Blog</a>
