--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -21,6 +21,11 @@
 
     {{ partial:components/footer }}
 </main>
+<script defer data-domain="{{ config:plausible.tracking_domain }}" src="{{ config:plausible.plausible_domain }}/js/script.js"></script>
+<script>
+    window.plausible = window.plausible || function() {
+        (window.plausible.q = window.plausible.q || []).push(arguments)
+    }
+</script>
 </body>
-{{ plausible:tracking }}
 </html>
