--- a/resources/views/components/topbar.antlers.html
+++ b/resources/views/components/topbar.antlers.html
@@ -73,7 +73,7 @@
             </div>
 
 
-            <a href="/documentation" class="text-md font-semibold leading-6 text-base-200">Documentation</a>
+            <a href="/documentation/welcome" class="text-md font-semibold leading-6 text-base-200">Documentation</a>
             <a href="/articles" class="text-md font-semibold leading-6 text-base-200">Blog</a>
         </div>
         <div class="hidden lg:flex lg:flex-1 lg:justify-end">
@@ -127,7 +127,7 @@
                                         class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-base-100 hover:bg-base-950">All Features</a>
                             </div>
                         </div>
-                        <a href="/documentation"
+                        <a href="/documentation/welcome"
                            class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-base-100 hover:bg-base-950">Documentation</a>
                         <a href="/articles"
                            class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-base-100 hover:bg-base-950">Blog</a>
