--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -26,6 +26,14 @@
     }
 
     code {
-        @apply text-red;
+        @apply text-base-100 select-all;
+    }
+
+    :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before {
+        content: '';
+    }
+
+    :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
+        content: '';
     }
 }
