--- a/resources/views/documentation/index.antlers.html
+++ b/resources/views/documentation/index.antlers.html
@@ -2,25 +2,19 @@
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl">
             <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Documentation</h2>
-            <p class="mt-2 text-lg leading-8 text-base-200">
-               Explore Vigilant's documentation
+            <p class="mt-2 text-md leading-8 text-base-200">
+                Vigilant's documentation is split into three section depending on how you want to use Vigilant.
             </p>
-            <div class="mt-10 space-y-8 border-t border-base-300 pt-10 sm:mt-16 sm:pt-16">
-                {{ collection:documentation status:in="published" }}
-                    <article class="flex max-w-xl items-start justify-between">
-                        <div class="group relative">
-                            <h3 class="mt-3 text-lg font-semibold leading-6 text-white group-hover:text-base-100">
-                                <a href="/documentation/{{ slug }}">
-                                    <span class="absolute inset-0"></span>
-                                    {{ title }}
-                                </a>
-                            </h3>
-                        </div>
-                        <a href="/documentation/{{ slug }}" class="text-md text-red z-40 mt-4">View >></a>
-
-                    </article>
-                {{ /collection:documentation }}
-
+            <div class="mt-4 sm:mt-16 pt-6 border-t border-base-300 flex flex-col sm:flex-row gap-4">
+                <a href="{{ route:documentation.type type='user' }}" class="flex-1 flex items-center justify-center px-4 py-8 rounded bg-base-900 text-white text-center hover:bg-base-800">
+                    User Documentation
+                </a>
+                <a href="{{ route:documentation.type type='hosting' }}" class="flex-1 flex items-center justify-center px-4 py-8 rounded bg-base-900 text-white text-center hover:bg-base-800">
+                    Hosting
+                </a>
+                <a href="{{ route:documentation.type type='development' }}" class="flex-1 flex items-center justify-center px-4 py-8 rounded bg-base-900 text-white text-center hover:bg-base-800">
+                    Development
+                </a>
             </div>
         </div>
     </div>
