--- a/resources/views/documentation/show.antlers.html
+++ b/resources/views/documentation/show.antlers.html
@@ -1,19 +1,30 @@
-<div class="px-6 py-24 lg:px-8">
-    <div class="max-w-7xl mx-auto flex gap-20">
-        <div>
-            <h3 class="text-base-400 mb-2 text-md">Documentation</h3>
-            <ul class="space-y-1">
-                {{ nav:documentation }}
-                    <li><a {{ if is_current || is_parent }} class="text-md text-red-light" {{ /if }} href="{{ url }}">{{ title }}</a></li>
-                {{ /nav:documentation }}
-            </ul>
-        </div>
-        <div class="flex-1 text-base leading-7 text-gray-700">
-            <h1 class="mt-2 text-4xl font-bold tracking-tight text-white sm:text-7xl">{{ title }}</h1>
-            <div class="mt-10 text-lg max-w-2xl text-base-200 prose">
-                {{ content }}
-            </div>
+<div class="grid grid-cols-6 space-x-12 mt-4">
+    <div class="col-span-2 flex justify-end bg-base-950 rounded-tr rounded-br pr-12 py-8">
+        <ul class="space-y-3">
+            {{ nav:documentation }}
+                <li class="mb-4">
+                    {{ if children }}
+                        <p class="font-bold text-lg mb-2">{{ title }}</p>
+                        <ul class="space-y-1">
+                            {{ children }}
+                            <li class="text-md{{ if is_current }} font-bold text-red-light {{ /if }}">
+                                <a class="text-md
+                                    {{ if is_current }} text-red-light {{ /if }}" href="{{ url }}">{{ title }}</a>
+                            </li>
+                            {{ /children }}
+                        </ul>
+                    {{ else }}
+                        <a class="text-md
+                            {{ if is_current }} text-red-light {{ /if }}" href="{{ url }}">{{ title }}</a>
+                    {{ /if }}
+                </li>
+            {{ /nav:documentation }}
+        </ul>
+    </div>
+    <div class="col-span-4 text-base leading-7 text-gray-700">
+        <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">{{ title }}</h1>
+        <div class="mt-10 text-sm max-w-2xl text-base-200 prose">
+            {{ content }}
         </div>
     </div>
-
 </div>
