--- a/resources/views/components/footer.antlers.html
+++ b/resources/views/components/footer.antlers.html
@@ -2,7 +2,7 @@
     <div class="mx-auto max-w-7xl overflow-hidden px-6 py-20 sm:py-24 lg:px-8">
         <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
             <div class="pb-6">
-                <a href="/documentation" class="text-sm leading-6 text-base-300 hover:text-gray-100">Documentation</a>
+                <a href="/documentation/welcome" class="text-sm leading-6 text-base-300 hover:text-gray-100">Documentation</a>
             </div>
             <div class="pb-6">
                 <a href="/articles" class="text-sm leading-6 text-base-300 hover:text-gray-100">Blog</a>
