--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title ?? site:name }}</title>
+    <title>{{ title ?? site:name }} | Vigilant</title>
     {{ vite src="resources/js/site.js|resources/css/site.css" }}
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
