--- a/resources/views/components/topbar.antlers.html
+++ b/resources/views/components/topbar.antlers.html
@@ -77,8 +77,8 @@
             <a href="/articles" class="text-md font-semibold leading-6 text-base-200">Blog</a>
         </div>
         <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-            <a href="{{ $appUrl }}" class="text-sm font-semibold leading-6 text-white">Log in <span
-                aria-hidden="true">&rarr;</span></a>
+{{#             <a href="{{ $appUrl }}" class="text-sm font-semibold leading-6 text-white">Log in <span #}}
+{{#                 aria-hidden="true">&rarr;</span></a> #}}
         </div>
     </nav>
     <div class="lg:hidden" role="dialog" aria-modal="true" x-show="sideMenu" x-cloak>
@@ -123,8 +123,9 @@
                                     <a href="/feature/{{ slug }}"
                                        class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-base-100 hover:bg-base-950">{{ title }}</a>
                                 {{ /collection:features }}
-                                    <a href="/features"
-                                        class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-base-100 hover:bg-base-950">All Features</a>
+                                <a href="/features"
+                                   class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-base-100 hover:bg-base-950">All
+                                    Features</a>
                             </div>
                         </div>
                         <a href="/documentation/welcome"
@@ -132,10 +133,11 @@
                         <a href="/articles"
                            class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-base-100 hover:bg-base-950">Blog</a>
                     </div>
-                    <div class="py-6">
-                        <a href="{{ $appUrl }}"
-                           class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-base-50 hover:bg-base-950">Log in</a>
-                    </div>
+{{#                         <div class="py-6"> #}}
+{{#                             <a href="{{ $appUrl }}" #}}
+{{#                                class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-base-50 hover:bg-base-950">Log #}}
+{{#                                 in</a> #}}
+{{#                         </div> #}}
                 </div>
             </div>
         </div>
