--- a/resources/views/articles/index.antlers.html
+++ b/resources/views/articles/index.antlers.html
@@ -23,8 +23,7 @@
                             </h3>
                             <p class="mt-5 line-clamp-3 text-sm leading-6 text-base-200">{{ introduction }}</p>
                         </div>
-                        <a href="/articles/{{ slug }}" class="text-md text-red z-40 mt-4">Read Article >></a>
-
+                        <a href="{{ url }}" class="text-md text-red z-40 mt-4">Read Article >></a>
                     </article>
                 {{ /collection:articles }}
 
