--- a/resources/views/articles/show.antlers.html
+++ b/resources/views/articles/show.antlers.html
@@ -10,7 +10,7 @@
         <div class="mt-10 text-lg max-w-2xl text-base-200 prose">
             {{ content }}
             {{ if type == "text" }}
-                <div class="text">
+                <div>
                     {{ text }}
                 </div>
             {{ elseif type == "full_width_image" }}
