--- a/resources/views/features/index.antlers.html
+++ b/resources/views/features/index.antlers.html
@@ -13,15 +13,16 @@
         <section class="mt-24">
             <dl class="mx-auto grid max-w-2xl grid-cols-1 gap-x-6 gap-y-10 text-base leading-7 text-gray-300 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3 lg:gap-x-8 lg:gap-y-16">
                 {{ collection:features status:in="published" }}
-                    <div class="relative pl-9">
-                        <dt class="inline font-semibold text-white">
-                          <span class="absolute left-1 top-1 h-5 w-5 text-white">
+                    <div class="relative pl-9 group">
+                        <a href="{{ url }}" class="absolute inset-0 z-10"></a>
+                        <dt class="inline font-semibold text-white group-hover:text-red-light transition">
+                          <span class="absolute left-1 top-1 h-5 w-5 text-white group-hover:text-red-light">
                               {{ icon }}
                           </span>
                             {{ title }}
                         </dt>
                         <br/>
-                        <dd class="inline">{{ short_description }}</dd>
+                        <dd class="inline group-hover:text-gray-200">{{ short_description }}</dd>
                     </div>
                 {{ /collection:features }}
             </dl>
