--- a/resources/views/features/show.antlers.html
+++ b/resources/views/features/show.antlers.html
@@ -1,5 +1,5 @@
-<div class="px-6 py-24 lg:px-8">
-    <div class="mx-auto max-w-7xl text-base leading-7 text-gray-700">
+<div class="">
+    <div class="px-6 py-24 lg:px-8 mx-auto max-w-7xl text-base leading-7 text-gray-700">
         <div class="grid grid-cols-3">
             <div class="col-span-2">
                 <span class="text-red text-lg">Feature</span>
@@ -11,7 +11,7 @@
             </div>
         </div>
 
-        <div class="mt-10 text-lg max-w-7xl text-base-200 prose lg:prose-2xl space-y-8">
+        <div class="mt-10 text-lg max-w-7xl text-base-200 prose lg:prose-2xl space-y-24">
             {{ content }}
             {{ if type == "text" }}
                 <div class="text-xm text-base-200 prose">
@@ -37,4 +37,15 @@
             {{ /content }}
         </div>
     </div>
+
+    <div class="bg-red">
+        <div class="mx-auto max-w-7xl px-6 py-24 sm:py-32 lg:flex lg:items-center lg:justify-between lg:px-8">
+            <h2 class="text-3xl font-bold tracking-tight text-base-50 sm:text-4xl">Try Vigilant<br/>Deploy on your own infrastructure</h2>
+            <div class="mt-10 flex items-center gap-x-6 lg:mt-0 lg:flex-shrink-0">
+                <a href="/documentation/deployment" class="rounded-full px-4 py-1.5 text-sm font-semibold text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-blue hover:bg-blue-light">Get Started</a>
+                <a href="/documentation/welcome" class="text-sm font-semibold leading-6 text-base-100 hover:text-base-50">Documentation <span aria-hidden="true">→</span></a>
+            </div>
+        </div>
+    </div>
+
 </div>
