--- a/resources/views/features/show.antlers.html
+++ b/resources/views/features/show.antlers.html
@@ -1,5 +1,5 @@
 <div class="">
-    <div class="px-6 py-24 lg:px-8 mx-auto max-w-7xl text-base leading-7 text-gray-700">
+    <div class="px-8 py-24 lg:px-12 mx-auto max-w-7xl text-base leading-7 text-gray-700">
         <div class="grid grid-cols-3">
             <div class="col-span-2">
                 <span class="text-red text-lg">Feature</span>
@@ -18,7 +18,7 @@
                     {{ text }}
                 </div>
             {{ elseif type == "text_with_right_image" }}
-                <div class="flex justify-between space-x-8">
+                <div class="flex flex-col lg:flex-row justify-between lg:space-x-8 space-y-8 lg:space-y-0">
                     <div class="text-md text-base-200 prose">{{ text }}</div>
                     <div class="relative mt-0 flex-shrink-0 max-w-xl not-prose">
                         <div class="absolute inset-0 bg-red-light blur-lg opacity-50 z-0"></div>
@@ -26,7 +26,7 @@
                     </div>
                 </div>
             {{ elseif type == "text_with_left_image" }}
-                <div class="flex justify-between space-x-8">
+                <div class="flex flex-col flex-col-reverse lg:flex-row justify-between lg:space-x-8 space-y-8 lg:space-y-0">
                     <div class="relative mt-0 flex-shrink-0 max-w-xl not-prose">
                         <div class="absolute inset-0 bg-red blur-lg opacity-50 z-0"></div>
                         <img class="object-contain w-full z-10 relative rounded-lg" src="{{ image:url }}" alt="{{ image:alt }}"/>
