--- a/resources/views/articles/show.antlers.html
+++ b/resources/views/articles/show.antlers.html
@@ -1,5 +1,5 @@
-<div class=" px-6 py-24 lg:px-8">
-    <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
+<div>
+    <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700 px-6 py-24 lg:px-8">
         <a href="/articles" class="text-red-light">All Articles</a>
         <h1 class="mt-2 text-4xl font-bold tracking-tight text-white sm:text-7xl">{{ title }}</h1>
         <div class="text-base-500 mt-2">
@@ -19,4 +19,6 @@
             {{ /content }}
         </div>
     </div>
+
+    {{ partial:components/try-banner }}
 </div>
