--- a/resources/views/components/footer.antlers.html
+++ b/resources/views/components/footer.antlers.html
@@ -1,6 +1,6 @@
 <footer class="bg-black">
     <div class="mx-auto max-w-7xl overflow-hidden px-6 py-20 sm:py-24 lg:px-8">
-        <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
+        <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12 font-header" aria-label="Footer">
             <div class="pb-6">
                 <a href="/documentation/welcome" class="text-sm leading-6 text-base-300 hover:text-gray-100">Documentation</a>
             </div>
@@ -25,6 +25,6 @@
                 </svg>
             </a>
         </div>
-        <p class="mt-10 text-center text-xs leading-5 text-base-500">&copy; {{ date|format('Y') }} Vigilant. All rights reserved.</p>
+        <p class="mt-10 text-center text-xs leading-5 text-base-500 font-text">&copy; {{ date|format('Y') }} Vigilant. All rights reserved.</p>
     </div>
 </footer>
