--- a/resources/views/articles/index.antlers.html
+++ b/resources/views/articles/index.antlers.html
@@ -1,7 +1,7 @@
 <div class="py-16 sm:py-24">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto max-w-2xl">
-            <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Blog</h2>
+        <div class="mx-auto max-w-2xl font-text">
+            <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl font-header">Blog</h2>
             <p class="mt-2 text-lg leading-8 text-base-200">
                 Hi! My name is <a href="https://github.com/vincentbean" target="_blank" class="text-red">Vincent</a> and
                 I'm building <a href="https://govigilant.io" class="text-red">Vigilant</a>, an open source web
@@ -12,10 +12,10 @@
                 {{ collection:articles status:in="published" sort="published_at:desc" }}
                     <article class="flex max-w-xl flex-col items-start justify-between">
                         <div class="flex items-center gap-x-4 text-xs text-base-300">
-                            <time datetime="{{ published_at|format('Y-m-d') }}" class="text-gray-500">{{ published_at|format('F d, Y') }}</time>
+                            <time datetime="{{ published_at|format('Y-m-d') }}" class="text-gray-500 font-header">{{ published_at|format('F d, Y') }}</time>
                         </div>
                         <div class="group relative">
-                            <h3 class="mt-3 text-lg font-semibold leading-6 text-white group-hover:text-base-100">
+                            <h3 class="mt-3 text-lg font-semibold leading-6 text-white group-hover:text-base-100 font-header">
                                 <a href="/articles/{{ slug }}">
                                     <span class="absolute inset-0"></span>
                                     {{ title }}
@@ -23,7 +23,7 @@
                             </h3>
                             <p class="mt-5 line-clamp-3 text-sm leading-6 text-base-200">{{ introduction }}</p>
                         </div>
-                        <a href="{{ url }}" class="text-md text-red z-40 mt-4">Read Article >></a>
+                        <a href="{{ url }}" class="text-md text-red z-40 mt-4 font-header">Read Article >></a>
                     </article>
                 {{ /collection:articles }}
 
