--- a/resources/views/articles/show.antlers.html
+++ b/resources/views/articles/show.antlers.html
@@ -1,13 +1,13 @@
 <div>
     <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700 px-6 py-24 lg:px-8">
-        <a href="/articles" class="text-red-light">All Articles</a>
-        <h1 class="mt-2 text-4xl font-bold tracking-tight text-white sm:text-7xl">{{ title }}</h1>
-        <div class="text-base-500 mt-2">
+        <a href="/articles" class="text-red-light font-header">All Articles</a>
+        <h1 class="mt-2 text-4xl font-bold tracking-tight text-white sm:text-7xl font-header">{{ title }}</h1>
+        <div class="text-base-500 mt-4 font-header">
             <time datetime="{{ published_at | format('Y-m-d') }}">{{ published_at|format('F d, Y') }}</time>
             <span>&middot; Written by {{ author.name }}</span>
         </div>
         <div class="mt-6 text-xl leading-8 text-base-200">{{ introduction }}</div>
-        <div class="mt-10 text-lg max-w-2xl text-base-200 prose">
+        <div class="mt-10 text-lg max-w-2xl text-base-200 prose font-text">
             {{ content }}
             {{ if type == "text" }}
                 <div>
