--- a/resources/views/components/topbar.antlers.html
+++ b/resources/views/components/topbar.antlers.html
@@ -1,6 +1,5 @@
-{{# {{? $appUrl = config('services.vigilant.app_url') ?}} #}}
 <header class="bg-black z-40" x-data="{ sideMenu: false }">
-    <nav class="mx-auto flex max-w-7xl items-center justify-between p-4 lg:px-8" aria-label="Global">
+    <nav class="mx-auto flex max-w-7xl items-center justify-between p-4 lg:px-8 font-text" aria-label="Global">
         <div class="flex lg:flex-1">
             <a href="/" class="-m-1.5 p-0.5">
                 <span class="sr-only">Vigilant</span>
@@ -20,7 +19,7 @@
         </div>
         <div class="hidden lg:flex lg:gap-x-12">
             <div class="relative" x-data="{ productMenu: false }">
-                <button type="button" class="flex items-center gap-x-1 text-md font-semibold leading-6 text-base-100"
+                <button type="button" class="flex items-center gap-x-1 text-md font-semibold leading-6 text-base-100 font-header"
                         aria-expanded="false"
                         x-on:click="productMenu = !productMenu">
                     Product
@@ -33,7 +32,7 @@
                 </button>
 
                 <div
-                    class="absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5"
+                    class="absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-gray-100 shadow-lg ring-1 ring-gray-900/5"
                     x-on:click.away="productMenu = false"
                     x-cloak
                     x-transition:enter="transition ease-out duration-200"
@@ -48,13 +47,13 @@
                             <div
                                 class="group relative flex items-center gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
                                 <div
-                                    class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
+                                    class="flex h-11 w-11 flex-none items-center justify-center rounded-lg group-hover:bg-white">
                                     <span class="h-6 w-6 text-gray-600 group-hover:text-red">
                                         {{ icon }}
                                     </span>
                                 </div>
                                 <div class="flex-auto">
-                                    <a href="/feature/{{ slug }}" class="block font-semibold text-gray-900">
+                                    <a href="/feature/{{ slug }}" class="block font-semibold text-gray-900 font-header">
                                         {{ title }}
                                         <span class="absolute inset-0"></span>
                                     </a>
@@ -73,8 +72,8 @@
             </div>
 
 
-            <a href="/documentation/welcome" class="text-md font-semibold leading-6 text-base-200">Documentation</a>
-            <a href="/articles" class="text-md font-semibold leading-6 text-base-200">Blog</a>
+            <a href="/documentation/welcome" class="text-md font-semibold leading-6 text-base-200 font-header">Documentation</a>
+            <a href="/articles" class="text-md font-semibold leading-6 text-base-200 font-header">Blog</a>
         </div>
         <div class="hidden lg:flex lg:flex-1 lg:justify-end">
 {{#             <a href="{{ $appUrl }}" class="text-sm font-semibold leading-6 text-white">Log in <span #}}
