--- a/resources/views/features/show.antlers.html
+++ b/resources/views/features/show.antlers.html
@@ -1,17 +1,17 @@
-<div class="">
+<div class="noto-sans">
     <div class="px-8 py-24 lg:px-12 mx-auto max-w-7xl text-base leading-7 text-gray-700">
         <div class="grid grid-cols-3">
             <div class="col-span-2">
-                <span class="text-red text-lg">Feature</span>
-                <h1 class="mt-2 text-4xl font-bold tracking-tight text-white sm:text-7xl">{{ title }}</h1>
-                <div class="mt-6 text-xl leading-8 text-base-200">{{ short_description }}</div>
+                <span class="text-red text-lg font-header">Feature</span>
+                <h1 class="mt-2 text-4xl font-bold font-header tracking-tight text-white sm:text-7xl">{{ title }}</h1>
+                <div class="mt-6 text-xl leading-8 text-base-200 font-text">{{ short_description }}</div>
             </div>
             <div class="flex justify-end pr-8" x-data="{ anim: true }" x-init="setTimeout(() => anim = false, 2000)" :class="anim ? 'animate-pulse' : ''">
-                {{ icon | replace('<svg', '<svg class="h-24 w-24 text-red rotate-12"') }}
+                {{ icon | replace('<svg', '<svg class="h-36 w-36 text-red rotate-12"') }}
             </div>
         </div>
 
-        <div class="mt-10 text-lg max-w-7xl text-base-200 prose lg:prose-2xl space-y-24">
+        <div class="mt-10 text-lg max-w-7xl text-base-200 space-y-24 font-text">
             {{ content }}
             {{ if type == "text" }}
                 <div class="text-xm text-base-200 prose">
@@ -19,19 +19,23 @@
                 </div>
             {{ elseif type == "text_with_right_image" }}
                 <div class="flex flex-col lg:flex-row justify-between lg:space-x-8 space-y-8 lg:space-y-0">
-                    <div class="text-md text-base-200 prose">{{ text }}</div>
+                    <div class="space-y-2">
+                        <h3 class="text-4xl font-header text-base-100">{{ heading }}</h3>
+                        <div class="text-md text-base-200 prose">{{ text }}</div>
+                    </div>
                     <div class="relative mt-0 flex-shrink-0 max-w-xl not-prose">
-                        <div class="absolute inset-0 bg-red-light blur-lg opacity-50 z-0"></div>
                         <img class="object-contain w-full z-10 relative rounded-lg" src="{{ image:url }}" alt="{{ image:alt }}"/>
                     </div>
                 </div>
             {{ elseif type == "text_with_left_image" }}
-                <div class="flex flex-col flex-col-reverse lg:flex-row justify-between lg:space-x-8 space-y-8 lg:space-y-0">
+                <div class="flex flex-col lg:flex-row justify-between lg:space-x-8 space-y-8 lg:space-y-0">
                     <div class="relative mt-0 flex-shrink-0 max-w-xl not-prose">
-                        <div class="absolute inset-0 bg-red blur-lg opacity-50 z-0"></div>
                         <img class="object-contain w-full z-10 relative rounded-lg" src="{{ image:url }}" alt="{{ image:alt }}"/>
                     </div>
-                    <div class="mt-0 flex-shrink-0 max-w-xl object-contain">{{ text }}</div>
+                    <div class="space-y-2">
+                        <h3 class="text-4xl font-header text-base-100">{{ heading }}</h3>
+                        <div class="mt-0 flex-shrink-0 max-w-xl object-contain">{{ text }}</div>
+                    </div>
                 </div>
             {{ /if }}
             {{ /content }}
